--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,53 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".MainActivity"
+tools:context=".HomeActivity"
 android:fitsSystemWindows="true">
 
-<Button
-    android:id="@+id/btnRefresh"
-    style="@style/Widget.AppCompat.Button.Colored"
-    android:layout_width="308dp"
-    android:layout_height="62dp"
-    android:layout_marginStart="36dp"
-    android:layout_marginTop="36dp"
-    android:text="Refresh"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.05"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/etDescription"
-    app:layout_constraintVertical_bias="0.0"/>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        app:menu="@menu/menu_bottom_navigation"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <fragment
+        android:id="@+id/frag_home"
+        android:name="com.kalicalitally.instaher.HomeFragment"
+        android:layout_width="match_parent"
+        android:layout_height="510dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
 
-<Button
-    android:id="@+id/btnCreate"
-    style="@style/Widget.AppCompat.Button.Colored"
-    android:layout_width="310dp"
-    android:layout_height="59dp"
-    android:layout_marginBottom="272dp"
-    android:layout_marginTop="36dp"
-    android:text="Create"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/btnRefresh"
-    app:layout_constraintVertical_bias="0.0" />
-
-<EditText
-    android:id="@+id/etDescription"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="84dp"
-    android:layout_marginTop="60dp"
-    android:ems="10"
-    android:hint="Enter a description"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.011"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
