--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,15 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     tools:context=".ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/logOut_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="308dp"
+            android:layout_height="58dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="LogOut" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="22dp"
+            android:src="@drawable/instagram_user_outline_24" />
+
+        <TextView
+            android:id="@+id/tvUserProfilename"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/imageView2"
+            android:layout_marginTop="96dp"
+            android:text="username"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvBio"
+            android:layout_width="362dp"
+            android:layout_height="49dp"
+            android:layout_alignStart="@+id/imageView2"
+            android:layout_below="@+id/tvUserProfilename"
+            android:hint="Add a Bio!" />
+
+        <Button
+            android:id="@+id/bio_btn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_alignBottom="@+id/tvUserProfilename"
+            android:layout_alignEnd="@+id/tvBio"
+            android:text="Set Bio" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvOwnPost"
+            android:layout_width="match_parent"
+            android:layout_height="275dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="59dp" />
+
+    </RelativeLayout>
 </FrameLayout>
