--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/ivPost"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="221dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="57dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
         android:layout_weight="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
