--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,9 +10,8 @@
         android:id="@+id/ivPost"
         android:layout_width="match_parent"
         android:layout_height="221dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
+        android:layout_above="@+id/ivLikes"
+        android:layout_alignParentStart="true"
         android:layout_weight="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -22,8 +21,8 @@
         android:id="@+id/ivLikes"
         android:layout_width="39dp"
         android:layout_height="28dp"
+        android:layout_above="@+id/tvViews"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivPost"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:srcCompat="@drawable/ufi_heart" />
@@ -32,7 +31,7 @@
         android:id="@+id/ivComment"
         android:layout_width="39dp"
         android:layout_height="28dp"
-        android:layout_below="@+id/ivPost"
+        android:layout_alignTop="@+id/ivLikes"
         android:layout_toEndOf="@+id/ivLikes"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -42,7 +41,7 @@
         android:id="@+id/ivDM"
         android:layout_width="31dp"
         android:layout_height="28dp"
-        android:layout_below="@+id/ivPost"
+        android:layout_alignTop="@+id/ivLikes"
         android:layout_toEndOf="@+id/ivComment"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -53,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/ivPost"
+        android:layout_alignTop="@+id/ivLikes"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:srcCompat="@drawable/ufi_save" />
@@ -62,8 +61,8 @@
         android:id="@+id/tvViews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/tvUsernameBottom"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivLikes"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0 Views"
@@ -74,7 +73,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ivPost"
-        android:layout_marginBottom="-57dp"
         android:layout_toEndOf="@+id/ivLikes"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -85,8 +83,8 @@
         android:id="@+id/tvUsernameBottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/tvDescriptions"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvViews"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="username"
@@ -98,7 +96,6 @@
         android:layout_height="31dp"
         android:layout_above="@+id/ivPost"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="-57dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:srcCompat="@drawable/instagram_user_outline_24" />
@@ -107,8 +104,8 @@
         android:id="@+id/tvDescriptions"
         android:layout_width="match_parent"
         android:layout_height="57dp"
+        android:layout_above="@+id/ivUserB"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvUsernameBottom"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="TextView" />
@@ -117,8 +114,8 @@
         android:id="@+id/ivUserB"
         android:layout_width="30dp"
         android:layout_height="29dp"
+        android:layout_above="@+id/tvTimeStamp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tvDescriptions"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:srcCompat="@drawable/instagram_user_outline_24" />
@@ -127,7 +124,7 @@
         android:id="@+id/tvAddComment"
         android:layout_width="226dp"
         android:layout_height="28dp"
-        android:layout_below="@+id/tvDescriptions"
+        android:layout_alignBottom="@+id/ivUserB"
         android:layout_toEndOf="@+id/ivUserB"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -139,7 +136,6 @@
         android:layout_height="32dp"
         android:layout_above="@+id/ivPost"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="-57dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         app:srcCompat="@drawable/ufi_more" />
@@ -148,11 +144,21 @@
         android:id="@+id/tvTimeStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivUserB"
+        android:layout_marginBottom="83dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0 mins ago"
         android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="39dp"
+        app:srcCompat="@drawable/line" />
 
 </RelativeLayout>
