--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -4,54 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ffffff"
+    android:background="@drawable/insta_background"
     tools:context=".CameraFragment">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageButton
-        android:id="@+id/btnImage"
-        android:layout_width="66dp"
-        android:layout_height="59dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/camera_shadow_fill" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ivPicture"
-        android:layout_width="232dp"
-        android:layout_height="151dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        <ImageButton
+            android:id="@+id/btnImage"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="77dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="208dp"
+            app:srcCompat="@drawable/camera_shadow_fill" />
 
-    <Button
-        android:id="@+id/postBttn"
-        android:layout_width="158dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Post" />
+        <ImageView
+            android:id="@+id/ivPicture"
+            android:layout_width="346dp"
+            android:layout_height="201dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="37dp"
+            android:theme="@style/AppTheme.NoActionBar"
+            app:srcCompat="@drawable/ic_launcher_background" />
 
-    <EditText
-        android:id="@+id/tvDescriptPost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="122dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Add a Description" />
+        <Button
+            android:id="@+id/postBttn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="158dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="47dp"
+            android:text="Post" />
 
-    <Button
-        android:id="@+id/BtnfeedBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/postBttn"
-        android:layout_centerHorizontal="true"
-        android:text="HomeFeed" />
-</RelativeLayout>
+        <EditText
+            android:id="@+id/tvDescriptPost"
+            android:layout_width="259dp"
+            android:layout_height="61dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="129dp"
+            android:background="@android:drawable/editbox_background_normal"
+            android:ems="10"
+            android:hint="Add a Description"
+            android:inputType="textPersonName" />
+
+    </RelativeLayout>
 
 </FrameLayout>
